[package]
name = "lotus-upgrade-tests"
version = { workspace = true }

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]

[dev-dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
diem-forge = { workspace = true }
diem-temppath = { workspace = true }
diem-types = { workspace = true }
lotus-framework = { workspace = true }
lotus-query = { workspace = true }
lotus-smoke-tests = { workspace = true }
lotus-types = { workspace = true }
lotus-txs = { workspace = true }
smoke-test = { workspace = true }
tokio = { workspace = true }
