[package]
name = "lotus"
build = "build.rs"
# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
diem = { workspace = true }
diem-config = { workspace = true }
diem-node = { workspace = true }
lotus-config = { workspace = true }
lotus-framework = { workspace = true }
lotus-genesis-tools = { workspace = true }
lotus-query = { workspace = true }
lotus-txs = { workspace = true }
lotus-types = { workspace = true }
lotus-wallet = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen = { workspace = true }
