[package]
name = "lotus-txs"
version = { workspace = true }

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
diem = { workspace = true }
diem-framework = { workspace = true }
diem-genesis = { workspace = true }
diem-logger = { workspace = true }
diem-sdk = { workspace = true }
diem-types = { workspace = true }
hex = { workspace = true }
indoc = { workspace = true }
lotus-cached-packages = { workspace = true }
lotus-query = { workspace = true }
lotus-types = { workspace = true }
lotus-wallet = { workspace = true }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
diem-forge = { workspace = true }
diem-temppath = { workspace = true }
lotus-framework = { workspace = true }
lotus-smoke-tests = { workspace = true }
smoke-test = { workspace = true }
